--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: UW Prosocial Computing Group
+title: Ruoxi (Anna) Shang
 author:
-  name: UW Prosocial Computing Group
-  email: your-email@domain.com
+  name: Ruoxi (Anna) Shang
+  email: rxshang@uw.edu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Prosocial Computing Group is a research lab at the University of Washington
+  Ruoxi (Anna) Shang's personal website
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
