--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,50 +1,13 @@
 list: # format date as dd/mm/yyyy
-  - title: "News 4 title"
-    date: "21/10/2021" # Oct 21, 2021
+  - title: "Actively looking for Summer 2023 internship opportunities!"
+    date: "Oct 2022" # Oct 21, 2021
     description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 3 title"
-    date: "25/06/2011" # Jun 25, 2011
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 2 title"
-    date: "21/01/1997"
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 1 title"
-    date: "21/08/1987" # Oct 21, 1997
+  - title: "Starting my new internship at TruEra"
+    date: "Sep 2022" # Oct 21, 2021
+    description: "I joined TruEra for summer internship with my amazing and supportive mentors. I did research on how data scientists approach performance debugging of machine learning models."
+  - title: "Presented my first first-author full paper at FAccT 2022"
+    date: "Jun 2022" # Oct 21, 2021
     description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 4 title"
-    date: "21/10/2021" # Oct 21, 2021
+  - title: "Attended my first in-person conference at CHI 2022"
+    date: "May 2022" # Oct 21, 2021
     description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 3 title"
-    date: "25/06/2011" # Jun 25, 2011
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 2 title"
-    date: "21/01/1997"
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 1 title"
-    date: "21/08/1987" # Oct 21, 1997
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 4 title"
-    date: "21/10/2021" # Oct 21, 2021
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 3 title"
-    date: "25/06/2011" # Jun 25, 2011
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 2 title"
-    date: "21/01/1997"
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 1 title"
-    date: "21/08/1987" # Oct 21, 1997
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 4 title"
-    date: "21/10/2021" # Oct 21, 2021
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 3 title"
-    date: "25/06/2011" # Jun 25, 2011
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 2 title"
-    date: "21/01/1997"
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  - title: "News 1 title"
-    date: "21/08/1987" # Oct 21, 1997
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac dignissim lacus."
-  
