Added pdf preprint

--- a/_data/publication.yml
+++ b/_data/publication.yml
@@ -6,6 +6,7 @@ publication:
       - Chirag Shah
     venue_short: "FAccT 2024 (In Submission)"
     venue_long: "Conference on Fairness, Accountability, and Transparency"
+    pdf: "facct2024_trust_paper.pdf"
   - title: "How Do Analysts Understand and Verify AI-Assisted Data Analyses?"
     authors:
       - Ken Gu
