--- a/_data/research-project.yml
+++ b/_data/research-project.yml
@@ -1,4 +1,14 @@
 project:
+  - title: "Exploring Diverse Viewpoints in Academic Research through LLMs"
+    short-content: "This project investigates how LLMs can support researchers in gaining diverse perspectives on their work, enhancing the quality of academic research."
+    content: "Diversity in viewpoint is not only welcomed but beneficial across online communities and other contexts, particularly in interdisciplinary research spaces such as HCI. This project explores the potential of Large Language Models (LLMs) in offering diverse perspectives to researchers, enabling them to view problems from different angles, anticipate potential controversies, uncover blind spots, and improve paper framing. The inherent limitations within academic and professional circles often restrict researchers to a narrow set of perspectives based on their background and community. Traditional review processes, while aiming to introduce broader viewpoints, can be time-consuming and unreliable. LLMs, known for their ideation capabilities, are utilized here to generate diverse viewpoints while adhering to good feedback practices and guidelines specific to research domains. This approach aims at providing a more reliable and efficient method for researchers to enhance their work with insights from a wider array of perspectives."
+    image: ""
+    alt: ""
+    date: "Ongoing"
+    type: "Research Project"
+    collaborator: ""
+    advisor: "Advised by Gary Hsieh, Chirag Shah, David McDonald"
+
   - title: "LLMs for Supporting Technical Interviews"
     short-content: "We are exploring how LLMs-powered feedback can facilitate programmers to practice soft skills during a coding interview. "
     content: "This research project leverages the capabilities of Large Language Models (LLMs) to explore provide qualitative feedback in the context of technical interviews. 
