modified project page

--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,10 @@ collections:
   projects:
     output: true
     permalink: /projects/:title
+
+defaults:
+  - scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: "project-detail"
