--- a/_data/research-project.yml
+++ b/_data/research-project.yml
@@ -1,17 +1,22 @@
 project:
   - title: "Designing AI-transformed Student Feedback for Instructor Engagement"
-    slug: "designing-ai-transformed-student-feedback"
-    short-content: "This project explores how AI and language models can help redesign teaching evaluation reports to increase instructor engagement while mitigating emotional burden."
-    content: "Student Evaluations of Teaching (SET) are crucial for improving education quality, but many instructors avoid or minimally engage with them due to cognitive and emotional costs. This research investigates how to redesign SET reports using language models to increase instructor engagement while protecting their wellbeing. The study explores a 4x4 design space combining different presentation strategies (Themes, Cards, Letter, Chatbot) with processing approaches (Remove, Paraphrase, Sandwich, Constructive) to highlight important feedback while de-emphasizing demotivating aspects. Through interviews with 16 post-secondary instructors, the research reveals opportunities for AI-powered tools to support various feedback engagement needs - from getting quick overviews to detailed teaching improvements. The findings highlight the importance of maintaining trust in AI systems through transparency and human oversight, while enabling fluid transitions between different uses of feedback over time. This work contributes insights for designing dynamic, customizable SET reports that better serve instructors' diverse goals and emotional needs."
+    slug: "ai-transformed-feedback"
+    authors:
+      - "Ruoxi Shang"
+      - "Keri Mallari"
+      - "Wei Bin Au Yeong"
+      - "Ken Yasuhara"
+      - "Anthony Tang"
+      - "Gary Hsieh"
+    abstract: "Many instructors minimally engage with or avoid student evaluations of teaching (SETs) due to the significant time, cognitive, and emotional cost associated with effective usage. Nevertheless, SETs can contain feedback about students' learning experiences that instructors can use to improve instructional and educational delivery. In this work, we explore how to redesign SET reports to increase instructor engagement with this feedback. We explore the use of language models (LMs) to process and filter students' feedback to highlight recurring or important ideas, to identify actionable changes for instructors, and to de-emphasize demotivating aspects of this feedback. We explored a $4 \times 4$ strategy-presentation design space, generating six representative mock-ups that combine different strategies with various presentation formats. Through interviews with 16 post-secondary instructors, we learned how and when they engage with current SETs, and how they would perceive and use the LM-powered redesigned SET mock-ups. We found that instructors valued different kinds of presentation strategies depending on their needs, be it to actually improve their teaching, to get a one-time gestalt impression of their teaching performance, or to provide summative reports about their teaching performance. These findings shed light on new opportunities for designers to design dynamic SET reports, customized to instructors needs."  
+    status: "In Revision for CSCW 2025"
+    pdf: "../assets/pdf/publications/cscw2025_set_paper.pdf"
+    slides: "https://embed.figma.com/slides/RTOrgB97nUjlJBIJOvSTo7/Research-Projects?node-id=1-456&embed-host=share"
     image: "debug.png"
     alt: "Mockup of redesigned teaching evaluation interface showing different views"
-    date: "In Revision for CSCW 2025"
-    type: "Research Project"
-    collaborator: ""
-    advisor: ""
 
-  - title: "Synthetic Diversity in Academic Research with LLMs"
-    short-content: "This project investigates how LLMs can support researchers in gaining diverse perspectives on their work, enhancing the quality of academic research."
+  - title: "Synthetic Diversity in Academic Paper Reviews with LLMs"
+    #short-content: "This project investigates how LLMs can support researchers in gaining diverse perspectives on their work, enhancing the quality of academic research."
     content: "Diversity in viewpoint is not only welcomed but beneficial across online communities and other contexts, particularly in interdisciplinary research spaces such as HCI. This project explores the potential of Large Language Models (LLMs) in offering diverse perspectives to researchers, enabling them to view problems from different angles, anticipate potential controversies, uncover blind spots, and improve paper framing. The inherent limitations within academic and professional circles often restrict researchers to a narrow set of perspectives based on their background and community. Traditional review processes, while aiming to introduce broader viewpoints, can be time-consuming and unreliable. LLMs, known for their ideation capabilities, are utilized here to generate diverse viewpoints while adhering to good feedback practices and guidelines specific to research domains. This approach aims at providing a more reliable and efficient method for researchers to enhance their work with insights from a wider array of perspectives."
     image: "diversity.png"
     alt: "Black and white sketch of different types of speech bubbles generated by DALL-E 3"
